# pdb-sync

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci.yml
docs/: config-reference.ja.md  config-reference.md  internal-architecture.ja.md  mirror-investigation.md
plans/: bright-skipping-cerf.md  compiled-snuggling-gizmo.md  ethereal-stirring-abelson.md  flickering-rolling-flurry.md  functional-munching-raven.md  future-features.md  gleaming-toasting-oasis.md  glistening-baking-lagoon.md  glittery-stirring-cocke.md  imperative-kindling-scone.md  init-depth-improvements.md  jaunty-questing-dawn.md  jolly-coalescing-cocoa.md  lazy-humming-dream.md  moonlit-yawning-pond.md  pdb-cli-v2-plan.md  phase-1-args-modularization.md  phase-2-error-handling.md  phase-3-shared-arg-groups.md  phase-4-custom-parsers.md  phase-5-flag-source-tracking.md  phase1-data-type-system.md  phase2-sync-enhancement.md  phase3-download-enhancement.md  phase4-list-command.md  phase5-info-command.md  phase6-validate-command.md  phase7-config-improvements.md  phase8-extended-pdb-id.md  plan-config-validate.md  plan-env-doctor.md  plan-sync-parallel.md  plan-sync-plan-dry-run.md  plan-sync-profile-presets.md  plan-sync-retry.md  plan-sync-status-history.md  purrfect-skipping-lampson.md  reflective-doodling-reef.md  serialized-conjuring-cookie.md  serialized-inventing-pebble.md  (+19 more)
src/: context.rs  data_types.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs  rcsb.rs
src/cli/: args.rs  mod.rs
src/cli/args/: commands.rs  config.rs  enums.rs  env.rs  global.rs  mod.rs  parsers.rs  sync.rs
src/cli/commands/: config.rs  convert.rs  copy.rs  download.rs  env.rs  find.rs  info.rs  init.rs  jobs.rs  list.rs  mod.rs  setup.rs  stats.rs  sync.rs  tree.rs  update.rs  validate.rs  watch.rs
src/cli/commands/env/: doctor.rs  mod.rs
src/cli/commands/profile/: add.rs  list.rs  mod.rs  show.rs
src/cli/commands/sync/: common.rs  mod.rs  pdbe.rs  pdbj.rs  wwpdb.rs
src/config/: loader.rs  merged.rs  mod.rs  schema.rs  source.rs  validator.rs
src/convert/: compress.rs  format.rs  mod.rs
src/download/: aria2c.rs  engine.rs  https.rs  mod.rs  task.rs
src/files/: mod.rs  paths.rs  pdb_id.rs
src/history/: mod.rs  tracker.rs
src/jobs/: manager.rs  mod.rs  spawn.rs
src/mirrors/: auto_select.rs  mod.rs  registry.rs
src/profiles/: mod.rs
src/stats/: collector.rs  mod.rs  remote.rs  types.rs
src/sync/: flags.rs  mod.rs  plan.rs  presets.rs  progress.rs  rsync.rs  validator.rs
src/tree/: build.rs  mod.rs  render.rs
src/update/: mod.rs
src/utils/: colors.rs  format.rs  id_reader.rs  mod.rs
src/validation/: checksum.rs  mod.rs
src/watch/: hooks.rs  mod.rs  notify.rs  rcsb.rs  state.rs
tests/: cli_profile_tests.rs
