[package]
name = "pdb-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Protein Data Bank files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
directories = "5.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process", "io-util"] }
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
url = "2.5"
futures-util = "0.3"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10"
