[package]
name = "pdb-sync"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Protein Data Bank files"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "color"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
thiserror = "2.0"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process", "io-util", "sync", "time"] }
libc = "0.2"
fs2 = "0.4"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
thousands = "0.2"
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
